--- a/skincare-frontend/my-heroui-app/src/tailwind-base.css
+++ b/skincare-frontend/my-heroui-app/src/tailwind-base.css
@@ -1,6 +1,3 @@
-/* src/tailwind-base.css */
-
-/* A basic reset, normalize default margins, paddings, etc. */
 *,
 *::before,
 *::after {
@@ -19,12 +16,7 @@ body {
   background-color: #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  font-weight: bold;
-}
-
-p {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
 
@@ -38,4 +30,3 @@ a {
   color: inherit;
 }
 
-/* Add more custom reset or base styles as needed */
