--- a/skincare-frontend/my-heroui-app/src/tailwind-utilities.css
+++ b/skincare-frontend/my-heroui-app/src/tailwind-utilities.css
@@ -1,95 +1,27 @@
-/* src/tailwind-utilities.css */
+.m-1 { margin: 0.25rem; }
+.m-2 { margin: 0.5rem; }
+.m-4 { margin: 1rem; }
+.mt-2 { margin-top: 0.5rem; }
+.mb-2 { margin-bottom: 0.5rem; }
 
-/* Margin Utilities */
-.m-1 {
-  margin: 0.25rem;
-}
+.p-1 { padding: 0.25rem; }
+.p-2 { padding: 0.5rem; }
+.p-4 { padding: 1rem; }
 
-.m-2 {
-  margin: 0.5rem;
-}
+.text-red { color: red; }
+.text-green { color: green; }
+.text-blue { color: blue; }
 
-.m-4 {
-  margin: 1rem;
-}
+.bg-red { background-color: red; }
+.bg-green { background-color: green; }
+.bg-blue { background-color: blue; }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
+.flex { display: flex; }
+.flex-row { flex-direction: row; }
+.flex-column { flex-direction: column; }
+.justify-center { justify-content: center; }
+.items-center { align-items: center; }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-/* Padding Utilities */
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-/* Text color Utilities */
-.text-red {
-  color: red;
-}
-
-.text-green {
-  color: green;
-}
-
-.text-blue {
-  color: blue;
-}
-
-/* Background color Utilities */
-.bg-red {
-  background-color: red;
-}
-
-.bg-green {
-  background-color: green;
-}
-
-.bg-blue {
-  background-color: blue;
-}
-
-/* Flexbox Utilities */
-.flex {
-  display: flex;
-}
-
-.flex-row {
-  flex-direction: row;
-}
-
-.flex-column {
-  flex-direction: column;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.items-center {
-  align-items: center;
-}
-
-/* Font size Utilities */
-.text-sm {
-  font-size: 0.875rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-}
+.text-sm { font-size: 0.875rem; }
+.text-lg { font-size: 1.125rem; }
+.text-xl { font-size: 1.25rem; }
